# aoe-29-discordbot

./: Dockerfile  README.md  pyproject.toml  requirement.txt
aoe_29_discordbot/: main.py
